# hw_django

./: pyproject.toml
hw_project/: .env  db.sqlite3
hw_project/hw_project/: settings.py
hw_project/quotes/: utils.py  views.py
hw_project/quotes/static/quotes/: style.css
hw_project/quotes/templates/quotes/: add_author.html  authors.html  base.html  index.html  quote.html  tag.html
hw_project/quotes/templatetegs/: extract.py
hw_project/users/: admin.py  forms.py  models.py  urls.py  views.py
hw_project/users/migrations/: 0001_initial.py
hw_project/users/templates/users/: logout.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  signin.html  signup.html
hw_project/utils/: add_quotes_to_mongo.py  migration.py  quotes.json
