[tool.poetry]
name = "hw-django"
version = "0.1.0"
description = ""
authors = ["SergiiGoncharov13 <goncharov.s.work@gmail.com>"]
readme = "README.md"
packages = [{include = "hw_django"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
pymongo = "^4.3.3"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
